[package]
name = "runsh"
version = "0.1.1"
authors = ["James Cole <jamescole.uk@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jamescoleuk/runsh"
description = "A cli frontend for your bash scripts"
readme = "README.md"
keywords = ["bash", "cli"]
categories = ["command-line-interface", "command-line-utilities"]
edition = "2018"

[dependencies]
structopt = "0.3.13"
colored = "2"
regex = "1.5.4"
pad = "0.1.6"