[package]
name = "runsh"
version = "0.1.8"
authors = ["James Cole <jamescole.uk@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jamescoleuk/runsh"
description = "A cli frontend for your bash scripts"
readme = "README.md"
keywords = ["bash", "cli"]
categories = ["command-line-interface", "command-line-utilities"]
edition = "2018"

[dependencies]
structopt = "0.3.13"
colored = "2"
regex = "1.5.4"
pad = "0.1.6"
walkdir = "2.3.2"
faccess = "0.2.3"
# Anyhow makes application error handling easier.
# If I was writing a library I'd use thiserror.
anyhow = "1.0.44"
content_inspector = "0.2.4"