[package]
authors = ["James Cole <jamescole.uk@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities"]
description = "A command palette for your bash functions."
edition = "2021"
keywords = ["bash", "cli"]
license = "MIT OR Apache-2.0"
name = "lk"
readme = "README.md"
repository = "https://github.com/jamescoleuk/lk"
version = "0.5.1"

[dependencies]
anyhow = "1.0.44" # Anyhow makes application error handling easier. If I was writing a library I'd use thiserror.
config = "0.14.0" # Config-rs reads from config from files or environment
content_inspector = "0.2.4" # To detect and ignore binary executables.
crossterm = "0.27.0"
dirs = "5.0.1" 
fuzzy-matcher = "0.3.7" 
fuzzy_finder = "0.4.1" 
glob = "0.3.0" # We want include and exclude to use proper pattern matching
log = "0.4.14" 
log4rs = "1.0.0" 
nanoid = "0.4.0" # To generate unique suffixes for the lk file.
pad = "0.1.6" # To display script and function names in center justified fashion.
pastel_colours = "0.2.0" 
ratatui = { version = "0.26.1", features = ["all-widgets", "termion", "macros"] }
regex = "1.5.4" 
serde = "1.0.132" 
spinners = "4.0.0" 
structopt = "0.3.13" # To handle lk arguments.
tempfile = "3.2.0" # Somewhere to store lk's temp file
termion = "3.0.0" 
toml = "0.8.12" 
