[package]
name = "fuzzy_finder"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jamescoleuk/lk"
description = "A fuzzy finding library used by lk"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: use thiserror instead of anyhow, because this is a library crate.
anyhow = "1.0.44"
termion= "1.5.6"
fuzzy-matcher = "0.3.7"
log="0.4.14"
pastel_colours={path="../pastel_colours"}