[package]
name = "pastel_colours"
authors = ["James Cole <jamescole.uk@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jamescoleuk/lk"
description = "Pastel colours for use with termion"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion= "1.5.6"